# c-dict-performance

./: CMakeLists.txt  LICENSE  README.md
cdict/: CMakeLists.txt  dict.c  dict.h  main.c  main.cxx
doc/: report_en.md  report_ru.md
results/: results_alnum_L12_windows.txt  results_alnum_L8_windows.txt
src/: benchmark.cpp  benchmark.hpp  dict.c  dict.h  key_generators.cpp  key_generators.hpp  main.cxx  qdict.c  qdict.h
